@@ -1,4 +1,4 @@
 // Version JS file
-var version = "1.1.0";
+var version = "1.1.1";
 
 document.write(" - " + version);
